Import messages to Chatwoot after connecting a instance in WhatsApp using the event 'messaging-history.set'. For now we are only processing the isLatest batch.
