# src/whatsapp/dto/chatwoot.dto.ts
@@ -9,4 +9,6 @@ export class ChatwootDto {
   reopen_conversation?: boolean;
   conversation_pending?: boolean;
   import_contacts?: boolean;
+  import_messages?: boolean;
+  days_limit_import_messages?: number;
 }
