# src/whatsapp/models/chatwoot.model.ts
@@ -14,6 +14,8 @@ export class ChatwootRaw {
   reopen_conversation?: boolean;
   conversation_pending?: boolean;
   import_contacts?: boolean;
+  import_messages?: boolean;
+  days_limit_import_messages?: number;
 }
 
 const chatwootSchema = new Schema<ChatwootRaw>({
@@ -28,6 +30,8 @@ const chatwootSchema = new Schema<ChatwootRaw>({
   reopen_conversation: { type: Boolean, required: true },
   conversation_pending: { type: Boolean, required: true },
   import_contacts: { type: Boolean, required: false },
+  import_messages: { type: Boolean, required: false },
+  days_limit_import_messages: { type: Number, required: false },
 });
 
 export const ChatwootModel = dbserver?.model(ChatwootRaw.name, chatwootSchema, 'chatwoot');
